ingress/nginx/ingress-with-helm-hello-app/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-app
  name: hello-app
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-app
  type: ClusterIP
